--- a/app/invite/[token]/invite-description.mdx
+++ b/app/invite/[token]/invite-description.mdx
@@ -1,4 +1,4 @@
-Another birthday, another inarproportatly close party announcement. 😅
+Another birthday, another inappropriately close party announcement. 😅
 
 Anyway, this time you will also have the delightful opportunity to disappoint,
 by participating in an unhinged powerpoint karaoke. 😈
